Add About and Experience

--- a/portfolio/client/views/about.ng.html
+++ b/portfolio/client/views/about.ng.html
@@ -1,7 +1,11 @@
-<section class="row">
+<section resize-foto="">
+    <header>
+        <h1 class="title" >O mnie</h1>
+    </header>
+
     <div class="img col-sm-6"></div>
     <div class="description cols-sm-6">
-        <h1>O mnie</h1>
+        <h1 class="title">Web Developer & Frontend Developer</h1>
         <p> lorem Ipsum jest tekstem stosowanym jako przykładowy wypełniacz w przemyśle poligraficznym. Został po raz
             pierwszy
             użyty w XV w. przez nieznanego drukarza do wypełnienia tekstem próbnej książki. Pięć wieków później zaczął
