--- a/portfolio/client/styles/about.scss
+++ b/portfolio/client/styles/about.scss
@@ -2,15 +2,50 @@
 #about{
   width: 60%;
   float: right;
+  position: relative;
+  height: 100%;
 
   section{
     width: 100%;
     color: white;
     padding: 50px;
 
+    .title{
+      font-family: monospace;
+      font-weight: bold;
+      text-shadow: 4px 4px #3f4d8b;
+      margin: 0px 0px 40px 0px;
+      background-color: #3a3d57;
+      border: solid black 2px;
+      display: inline-block;
+      padding: 20px;
+//      box-shadow: 5px 5px black;
+//      border-radius: 10px 10px 10px 10px;
+    }
+
     .img{
       background-image: url('img/me.jpg');
       background-size: cover;
+      background-position: center;
+    }
+
+    .description{
+      padding: 0px 0px 0 40px;
+      overflow: hidden;
+      font-family: sans-serif;
+      font-size: larger;
+      text-align: justify;
+
+      .title{
+        font-weight: bold;
+        margin: 0px 0px 10px 0px;
+        background-color: transparent;
+        padding: 0px;
+        box-shadow: none;
+        border: none;
+
+      }
+
     }
 
 
